--- a/src/pages/landing/HealthCountdown.css
+++ b/src/pages/landing/HealthCountdown.css
@@ -129,7 +129,7 @@ h1 {
 
 .themes {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-template-columns: repeat(3, 1fr);
   gap: 20px;
   margin-top: 30px;
 }
@@ -137,7 +137,7 @@ h1 {
 .theme {
   background: #2e2e2e;
   border-radius: 15px;
-  padding: 15px;
+  margin: 20px;
   text-align: center;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
   transition: transform 0.3s, box-shadow 0.3s;
