--- a/src/pages/landing/HealthCountdown.css
+++ b/src/pages/landing/HealthCountdown.css
@@ -130,14 +130,15 @@ h1 {
 .themes {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  gap: 20px;
+  gap: 30px;
   margin-top: 30px;
+  
 }
 
 .theme {
   background: #2e2e2e;
   border-radius: 15px;
-  margin: 20px;
+  /* margin: 20px; */
   text-align: center;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
   transition: transform 0.3s, box-shadow 0.3s;
@@ -231,6 +232,21 @@ h1 {
   font-size: 1.2em;
   font-weight: bold;
   color: var(--primary-color-dark);
+}
+
+.image-wrapper {
+  width: 100%;
+  padding-bottom: 60%; /* Height will be 80% of the width */
+  position: relative;
+}
+
+.image-wrapper img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 @keyframes logoSpin {
