--- a/src/pages/dashboard/DashboardHomepage.css
+++ b/src/pages/dashboard/DashboardHomepage.css
@@ -7,7 +7,7 @@ body {
   overflow-x: hidden;
 }
 
-.container-dashboard {
+.container {
   width: 100%; /* Use full width */
   max-width: 100%; /* Ensure no restrictions */
   margin: 0; /* Remove automatic margins */
