Mobility ADD page and mobility add form page has been added

--- a/src/pages/landing/MobilityStretch.css
+++ b/src/pages/landing/MobilityStretch.css
@@ -100,7 +100,7 @@
   /************************************************************
    * HEADER + PROGRESS
    ************************************************************/
-  header {
+  .mobility-stretch-header {
     text-align: center;
     position: relative;
     z-index: 2;
