--- a/src/pages/landing/HealthCountdown.css
+++ b/src/pages/landing/HealthCountdown.css
@@ -19,7 +19,6 @@ body {
   min-height: 100vh;
   overflow-x: hidden;
   transition: background 1s ease;
-
 }
 
 .container {
@@ -133,7 +132,6 @@ h1 {
   grid-template-columns: repeat(3, 1fr);
   gap: 30px;
   margin-top: 30px;
-  
 }
 
 .theme {
@@ -256,5 +254,91 @@ h1 {
   }
   100% {
     transform: rotate(360deg);
+  }
+}
+/* Media Queries for Responsiveness */
+
+/* Small screens (mobile devices) */
+@media (max-width: 768px) {
+  .countdown {
+    flex-direction: row;
+    max-width: 80vw;
+    gap: 1px;
+  }
+  .container {
+    padding-bottom: 70px;
+  }
+
+  .countdown div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px;
+  }
+
+  .countdown span {
+    font-size: 0.9rem;
+    font-weight: bold;
+  }
+
+  .countdown label {
+    font-size: 0.6rem;
+    margin-top: 5px;
+  }
+
+  .themes {
+    grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+  }
+
+  .theme-switcher {
+    width: 30%;
+    font-size: 10px;
+  }
+
+  .logo {
+    width: 120px;
+  }
+
+  .subheading {
+    font-size: 14px;
+  }
+}
+
+@media (max-width: 480px) {
+  .container {
+    padding-bottom: 50px !important;
+  }
+  .countdown {
+    flex-direction: row;
+    max-width: 80vw;
+    gap: 1px;
+  }
+  .theme-switcher {
+    width: 30%;
+    font-size: 10px;
+  }
+
+  .countdown div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px;
+  }
+
+  .countdown span {
+    font-size: 0.9rem;
+    font-weight: bold;
+  }
+
+  .countdown label {
+    font-size: 0.6rem;
+    margin-top: 5px;
+  }
+  .themes {
+    gap: 10px;
+  }
+
+  .theme p {
+    font-size: 12px;
   }
 }
