--- a/src/pages/dashboard/AdminSidebar.css
+++ b/src/pages/dashboard/AdminSidebar.css
@@ -138,3 +138,50 @@ body {
     right: -45px;
   }
 }
+
+/* Sliding Text Container */
+.sliding-text-container {
+  width: 97%;
+  overflow: hidden;
+  white-space: nowrap;
+  background-color: #f0f1f1; /* Light background */
+  padding: 10px 0;
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+  border-bottom: 1px solid #ddd;
+  margin-left: 60px;
+  margin-top: -32px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/* Sliding Text */
+.sliding-text {
+  display: flex;
+  padding: 0 10px;
+  font-size: 16px;
+  font-weight: 500;
+  color: #333;
+  animation: slide-left-right 20s linear infinite;
+  align-items: center;
+}
+
+.medal-icon {
+  width: 50px;
+  height: 50px;
+  margin: 0 10px;
+}
+
+/* Animation */
+@keyframes slide-left-right {
+  0% {
+    transform: translateX(100%);
+  }
+  50% {
+    transform: translateX(-100%);
+  }
+  100% {
+    transform: translateX(100%);
+  }
+}
+
