--- a/src/pages/Settings/MedalsPage.css
+++ b/src/pages/Settings/MedalsPage.css
@@ -124,7 +124,7 @@ h2 {
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
   display: flex;
-  justify-modal-content: center;
+  justify-content: center;
   align-items: center;
   z-index: 999;
 }
@@ -166,7 +166,7 @@ h2 {
 
 .modal-content .form-actions {
   display: flex;
-  justify-modal-content: space-between;
+  justify-content: space-between;
   margin-top: 20px;
 }
 
