--- a/src/pages/Settings/VideoManagement.css
+++ b/src/pages/Settings/VideoManagement.css
@@ -20,7 +20,7 @@
     text-align: center;
   }
   
-  .video-frame {
+  .video-frame-management {
     width: 100%;
     height: 200px;
     border: none;
@@ -58,7 +58,7 @@
     color: white;
   }
   
-  .modal-overlay {
+  .modal-overlay-management {
     position: fixed;
     top: 0;
     left: 0;
@@ -70,7 +70,7 @@
     align-items: center;
   }
   
-  .modal-content {
+  .modal-content-management {
     background: white;
     padding: 20px;
     border-radius: 10px;
@@ -78,7 +78,7 @@
     text-align: center;
   }
   
-  .form-actions {
+  .form-actions-management {
     margin-top: 20px;
   }
   
