--- a/src/pages/Admin/PreRegistration.css
+++ b/src/pages/Admin/PreRegistration.css
@@ -11,9 +11,9 @@ html {
 }
 
 /* Container */
-.container {
-  width: 90%;
-  margin: 0 auto;
+.container1 {
+  width: 70vw;
+  margin-left: auto;
   padding: 20px;
   background-color: white;
   border-radius: 8px;
