--- a/src/pages/Settings/VideoManagement.css
+++ b/src/pages/Settings/VideoManagement.css
@@ -1,89 +1,91 @@
 .video-management {
-    padding: 20px;
-  }
-  
-  .video-list {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 20px;
-    /* width: 100%; */
-    justify-content: center;
+  padding: 20px;
+}
 
-  }
-  
-  .video-card-dashboard {
-    width: 300px;
-    border: 1px solid #ddd;
-    border-radius: 10px;
-    padding: 10px;
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-    text-align: center;
-  }
-  
-  .video-frame-management {
-    width: 100%;
-    height: 200px;
-    border: none;
-    border-radius: 10px;
-  }
-  
-  .video-text {
-    margin-top: 10px;
-    font-size: 14px;
-    font-weight: bold;
-  }
-  
-  .add-video-button,
-  .edit-button,
-  .delete-button {
-    margin: 5px;
-    padding: 10px 15px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-  }
-  
-  .add-video-button {
-    background-color: #28a745;
-    color: white;
-  }
-  
-  .edit-button {
-    background-color: #007bff;
-    color: white;
-  }
-  
-  .delete-button {
-    background-color: #dc3545;
-    color: white;
-  }
-  
-  .modal-overlay-management {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .modal-content-management {
-    background: white;
-    padding: 20px;
-    border-radius: 10px;
-    width: 400px;
-    text-align: center;
-  }
-  
-  .form-actions-management {
-    margin-top: 20px;
-  }
-  
-  .delete-confirm-button,
-  .cancel-button {
-    margin: 5px;
-  }
-  
+.video-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  /* width: 100%; */
+  justify-content: center;
+}
+.container {
+  width: 70vw;
+  margin-left: auto;
+}
+
+.video-card-dashboard {
+  width: 300px;
+  border: 1px solid #ddd;
+  border-radius: 10px;
+  padding: 10px;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+  text-align: center;
+}
+
+.video-frame-management {
+  width: 100%;
+  height: 200px;
+  border: none;
+  border-radius: 10px;
+}
+
+.video-text {
+  margin-top: 10px;
+  font-size: 14px;
+  font-weight: bold;
+}
+
+.add-video-button,
+.edit-button,
+.delete-button {
+  margin: 5px;
+  padding: 10px 15px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.add-video-button {
+  background-color: #28a745;
+  color: white;
+}
+
+.edit-button {
+  background-color: #007bff;
+  color: white;
+}
+
+.delete-button {
+  background-color: #dc3545;
+  color: white;
+}
+
+.modal-overlay-management {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.modal-content-management {
+  background: white;
+  padding: 20px;
+  border-radius: 10px;
+  width: 400px;
+  text-align: center;
+}
+
+.form-actions-management {
+  margin-top: 20px;
+}
+
+.delete-confirm-button,
+.cancel-button {
+  margin: 5px;
+}
