Role and Translation has been implemented in admin panel page

--- a/src/pages/Admin/AdminPanel.css
+++ b/src/pages/Admin/AdminPanel.css
@@ -18,4 +18,11 @@
     font-size: 30px;
     margin-bottom: 10px;
   }
+
+  .transparent-item-admin-panel {
+    opacity: 0.5; /* Make it slightly transparent */
+    pointer-events: none; /* Disable clicks */
+    position: relative;
+    color: black;
+  }
   
